Fix spacing and visited link colour

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -237,7 +237,6 @@ html, body {
     @extend %header-font;
     font-size: 30px;
     padding-top: 0.5em;
-    padding-bottom: 0.5em;
     margin-top: 2em;
     margin-bottom: $h1-margin-bottom;
     border-top: 1px solid #ddd;
@@ -253,11 +252,10 @@ html, body {
   h2 {
     @extend %header-font;
     font-size: 20px;
-    margin-top: 4em;
-    margin-bottom: 0;
+    margin-top: 1.2em;
+    margin-bottom: 1.2em;
     border-top: 1px solid #eee;
     padding-top: 1.2em;
-    padding-bottom: 1.2em;
   }
 
   // h2s right after h1s should bump right up
@@ -282,11 +280,8 @@ html, body {
   }
 
   a {
-    &:link {
+    &:link, &:visited {
       color: #03b;
-    }
-    &:visited {
-      color: #84b;
     }
   }
 
